n; injalskjdf nslkdfj na;oiwejn lkjnsalkdfjanslkdjfanslkdfjansldkfjanlksjfnaslkjdfnlskdjf nlskdjf nslkdjfns

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 	<title>Page Title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="dist/settingizer.css" />
+	<style>
+	body {
+		font-family: sans-serif;
+		background: #e6ecf0;
+		margin: 30px;
+	}
+
+	.settings-creator {
+		max-width: 770px;
+	}
+	</style>
 </head>
 <body>
 	<script
