--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 		margin: 30px;
 	}
 
-	.settings-creator {
+	.settingizer {
 		max-width: 770px;
 	}
 	</style>
 </head>
 <body>
+	<div class="settingizer"></div>
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
