--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	}
 	</style>
 </head>
+
 <body>
 	<div class="settingizer"></div>
 	<script
@@ -303,7 +304,7 @@ var bcpo_settings = {
 	create_settings(data);
 	console.log('equivalence test');
 	console.log(data);
-	console.log($('.settings-creator').serializeObject());
+	console.log($('.settingizer form').serializeObject());
 	</script>
 </body>
 </html>
