--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
 	<title>Example</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="dist/settingizer.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="dist/themes/dark-theme.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="dist/themes/shopify-theme.css" />
 	<style>
 	body {
+		background: rgb(30,30,30);
 		background: #e6ecf0;
 		margin: 30px;
 	}
 
 	.settingizer {
-		max-width: 770px;
+		max-width: 786px;
 	}
 	</style>
 </head>
 
 <body>
-	<div class="settingizer"></div>
+	<div class="settingizer shopify-theme"></div>
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -215,8 +218,31 @@ var sizeChartData = [
 ];
 
 	var data = sizeChartData;
-
-	create_settings(data);
+// sizeChartData asked about undefined??
+	create_settings(data, {
+        "0": {
+            "id": {sc_show: false},
+            "products": {},
+            "collections": {
+                "0": {
+                    "id": {sc_show: false},
+                    "title": {}
+                },
+                "sc_add": true
+            },
+            "chart": {
+                "title": {},
+                "descriptionTop": {},
+                "values": {
+                    "sc_grid": true,
+                    "sc_add": true
+                },
+                "descriptionBottom": {},
+                "buttonPlacement": {}
+            }
+        },
+        "sc_add": true
+    });
 	console.log('equivalence test');
 	console.log(data);
 	console.log($('.settingizer form').serializeObject());
