classes shopify theme

--- a/index.html
+++ b/index.html
@@ -222,12 +222,20 @@ var sizeChartData = [
 	create_settings(data, {
         "0": {
             "id": {sc_show: false},
-            "products": {},
+            "products": {
+                "0": {
+                    "id": {sc_show: false},
+                    "title": {sc_description: 'hey'}
+                },
+                "sc_taglist": true,
+                "sc_add": true
+            },
             "collections": {
                 "0": {
                     "id": {sc_show: false},
-                    "title": {}
+                    "title": {sc_description: 'You can do it on the top or put in the hole. It\'s really up to you.'}
                 },
+                "sc_taglist": true,
                 "sc_add": true
             },
             "chart": {
