--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<div class="settingizer shopify-theme"></div>
+	<div class="settingizer"></div>
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -489,7 +489,7 @@ var newSizeChartData = [{"id":"d8dfd1ca-1e21-46c6-88a5-72680e1bfcbb","title":"ba
 
 	var data = newSizeChartData;
 // sizeChartData asked about undefined??
-	create_settings(bcpo_data, {
+	create_settings(data, {
     "0": {
         "id": {
             "sc_show": false
