--- a/index.html
+++ b/index.html
@@ -515,7 +515,8 @@ var newSizeChartData = [{"id":"d8dfd1ca-1e21-46c6-88a5-72680e1bfcbb","title":"ba
 			"sc_add": true
 		}
 	},
-	"sc_add": true
+	"sc_add": true,
+	sc_theme: 'shopify'
 	});
 	console.log('equivalence test');
 	console.log(data);
