--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ var newSizeChartData = [{"id":"d8dfd1ca-1e21-46c6-88a5-72680e1bfcbb","title":"ba
 		},
 		"title": {sc_readonly: true, sc_placeholder: 'title', sc_required: true},
 		"descriptionTop": {sc_link: '/hey?title=*|title|*'},
-		cats: {sc_type: 'button', sc_link: '/hey?title=*|title|*', sc_button_text: 'Go!!!'},
+		cats: {sc_type: 'button', sc_link: '/hey?title=*|title|*', sc_button_text: 'Go!!!', sc_label: 'dogs'},
 		"values": {
 			"sc_grid": true,
 			"sc_add": true
@@ -512,7 +512,8 @@ var newSizeChartData = [{"id":"d8dfd1ca-1e21-46c6-88a5-72680e1bfcbb","title":"ba
 				"operator": {sc_type: 'select', sc_options: ['is-equal-to', 'is-not-equal-to']},
 				"title": {}
 			},
-			"sc_add": true
+			"sc_add": true,
+			sc_label: 'cow'
 		}
 	},
 	"sc_add": true,
