--- a/index.html
+++ b/index.html
@@ -515,7 +515,8 @@ var newSizeChartData = [{"id":"d8dfd1ca-1e21-46c6-88a5-72680e1bfcbb","title":"ba
 			},
 			"sc_add": true,
 			sc_label: 'cow',
-			sc_order: false
+			sc_order: false,
+			sc_min: 1
 		}
 	},
 	"sc_add": true,
