--- a/index.html
+++ b/index.html
@@ -520,7 +520,9 @@ var newSizeChartData = [{"id":"d8dfd1ca-1e21-46c6-88a5-72680e1bfcbb","title":"ba
 		}
 	},
 	"sc_add": true,
-	sc_theme: 'shopify'
+	sc_theme: 'shopify',
+	sc_method: 'POST',
+	sc_action: '/save',
 	});
 	console.log('equivalence test');
 	console.log(data);
