--- a/index.html
+++ b/index.html
@@ -527,7 +527,12 @@ var newSizeChartData = {"charts":[{"id":"0","title":"","descriptionTop":"",value
 		}
 	},
 	"buttonPlacement": {"sc_show": false},
-	"buttonIcon": {"sc_show": false},
+	"buttonIcon": {
+		sc_type: 'image-swatches', sc_options: [
+			{key: 'ruler', value: '../settingizer/004-ruler-1.png'},
+			{key: 'tape', value: '../settingizer/006-ruler-2.png'},
+		]
+	},
 	"buttonText": {"sc_show": false},
 	"currentPlan": {"sc_show": false},
 	sc_action: '/save',
