--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@ var newSizeChartData = {"charts":[{"id":"0","title":"","descriptionTop":"",value
 	"buttonPlacement": {"sc_show": false},
 	"buttonIcon": {
 		sc_type: 'image-swatches', sc_options: [
-			{key: 'ruler', value: '../settingizer/004-ruler-1.png'},
-			{key: 'tape', value: '../settingizer/006-ruler-2.png'},
+			{key: 'ruler', value: 'https://proxy.shopifycdn.com/ee27112d56c1e68f040607dd7053df83520f23520d6ebcba420c9eff7d50aa6f/www.gravatar.com/avatar/267599d467ef5bc61ba32a5b8452b805.jpg?s=128&d=404'},
+			{key: 'tape', value: 'https://proxy.shopifycdn.com/ee27112d56c1e68f040607dd7053df83520f23520d6ebcba420c9eff7d50aa6f/www.gravatar.com/avatar/267599d467ef5bc61ba32a5b8452b805.jpg?s=128&d=404'},
 		]
 	},
 	"buttonText": {"sc_show": false},
