animation with height

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-	<div class="settingizer"></div>
+	<div class="settingizer shopify-theme"></div>
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -502,7 +502,7 @@ var newSizeChartData = {"charts":[{"id":"0","title":"","descriptionTop":"",value
 				"sc_show": false
 			},
 			"title": {},
-			"descriptionTop": {sc_type: 'textarea'},
+			"descriptionTop": {sc_type: 'textarea', sc_description: 'this will show up above the size chart'},
 			"values": {
 				sc_label: 'Size Chart',
 				"sc_type": 'grid',
