submit text, removed rows

--- a/index.html
+++ b/index.html
@@ -495,7 +495,8 @@ var newSizeChartData = {"charts":[{"id":"0","title":"","descriptionTop":"",value
 	var data = newSizeChartData;
 // sizeChartData asked about undefined??
 	create_settings(data, {
-		"charts": {
+	"charts": {
+		sc_add: true,
 		sc_label: false,
 		"0": {
 			"id": {
